--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,17 @@
 <!doctype HTML>
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width:device-width, initial-scale:1.0">
+		<meta name="author" content="Tobiasz Duliniec">
+		<link rel="stylesheet" href="style.css">
 		<title>Cryptosite</title>
 	</head>
 	<body>
 		<nav>
+			<header>
+				<h1>Ciphers</h1>
+			</header>
 			<a href="/Ceaser's cipher">Ceasar's cipher</a>
 			<a href="/Vinegree's cipher">Vinegree's cipher</a>
 		</nav>
