--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block main %}
-	<p>test</p>
+	<p>Welcome to Cryptosite. Please use the navbar to navigate the site.</p>
 {% endblock %}
