--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width:device-width, initial-scale:1.0">
 		<meta name="author" content="Tobiasz Duliniec">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Cryptosite</title>
 	</head>
 	<body>
@@ -12,10 +12,11 @@
 			<header>
 				<h1>Ciphers</h1>
 			</header>
-			<a href="/Ceaser's cipher">Ceasar's cipher</a>
-			<a href="/Vinegree's cipher">Vinegree's cipher</a>
+			<a href="/Cesar">Ceasar cipher</a>
+			<a href="/Vigenere">Vigenère cipher</a>
 		</nav>
 		<article>
+			<header><h1>Cryptosite</h1></header>
 			{% block main %}{% endblock %}
 		</article>
 	</body>
