--- a/templates/vigenerecipher.html
+++ b/templates/vigenerecipher.html
@@ -3,11 +3,11 @@
 	{% if result is defined %}
 		{{result}}
 	{% endif %}
-	<form action="/Cesar" method="POST">
+	<form action="/Vigenere" method="POST">
 		<label for="name">Message to encrypt:</label>
 		<input name="message" type="text" required>
-		<label for="shift">Shift:</label>
-		<input name="shift" type="number" required>
+		<label for="key">Key:</label>
+		<input name="key" type="text" required>
 		<label for="action">Action:</label>
 		<select name="action">
 			<option value="encrypt">Encrypt</option>
