--- a/templates/ceasarcipher.html
+++ b/templates/ceasarcipher.html
@@ -3,7 +3,8 @@
 	{% if result is defined %}
 		{{result}}
 	{% endif %}
-	<form action="/Cesar" method="POST">
+	<header><h1>Ceasar cipher</h1></header>
+	<form action="/Ceasar" method="POST">
 		<label for="name">Message to encrypt:</label>
 		<input name="message" type="text" required>
 		<label for="shift">Shift:</label>
