--- a/templates/vigenerecipher.html
+++ b/templates/vigenerecipher.html
@@ -3,6 +3,7 @@
 	{% if result is defined %}
 		{{result}}
 	{% endif %}
+	<header><h1>Vigenère cipher</h1></header>
 	<form action="/Vigenere" method="POST">
 		<label for="name">Message to encrypt:</label>
 		<input name="message" type="text" required>
