--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,11 @@
 			<header>
 				<h1>Ciphers</h1>
 			</header>
-			<a href="/Cesar">Ceasar cipher</a>
+			<a href="/Ceasar">Ceasar cipher</a>
 			<a href="/Vigenere">Vigenère cipher</a>
 		</nav>
+		<header><h1>Cryptosite</h1></header>
 		<article>
-			<header><h1>Cryptosite</h1></header>
 			{% block main %}{% endblock %}
 		</article>
 	</body>
