--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,12 @@
 <!doctype HTML>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width:device-width, initial-scale:1.0">
 		<meta name="author" content="Tobiasz Duliniec">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Cryptosite</title>
+		<script src="skrypt.js" defer></script>
 	</head>
 	<body>
 		<nav>
