--- a/templates/ceasarcipher.html
+++ b/templates/ceasarcipher.html
@@ -4,11 +4,11 @@
 	{% if result is defined %}
 		<p>{{message}} encrypted with a shift of {{shift}} is {{result}}.</p>
 	{% endif %}
-	<form action="/Ceasar" method="POST">
+	<form action="/Ceasar" id="encryption_form" method="POST">
 		<label for="name">Message to encrypt/decrypt:</label>
-		<input name="message" type="text" required>
+		<input name="message" id="message" type="text" required>
 		<label for="shift">Shift:</label>
-		<input name="shift" type="number" required>
+		<input name="shift" id="shift" type="number" required>
 		<label for="action">Action:</label>
 		<select name="action">
 			<option value="encrypt">Encrypt</option>
