--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,10 @@
 			</header>
 			<a href="/Ceasar">Ceasar cipher</a>
 			<a href="/Vigenere">Vigenère cipher</a>
+			<a href="/BaconsCipher">Bacon's cipher</a>
 		</nav>
-		<header><h1>Cryptosite</h1></header>
 		<article>
+			<header><h1>Cryptosite</h1></header>
 			{% block main %}{% endblock %}
 		</article>
 	</body>
