--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,25 @@
 body{
 	background-color: lightblue;
+}
+
+main{
 	display: grid;
 	grid-template-columns: 1fr 3fr;
 	gap: 10px;
-}
-
-nav{
-	text-align: center;
-	border: 4px solid;
-	padding: 20px;
-	border-radius: 20px;
-	background-color: skyblue;
 }
 
 nav a{
 	display: block;
 }
 
-article{
+article, nav, footer{
 	text-align: center;
 	border: 4px solid;
 	padding: 20px;
 	border-radius: 20px;
 	background-color: skyblue;
 }
+
+footer{
+	margin-top: 10px;
+}	
