--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width:device-width, initial-scale:1.0">
 		<meta name="author" content="Tobiasz Duliniec">
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="shortcut icon" href="/favicon.ico">
 		<title>Cryptosite</title>
 		{% if request.path == "/Vigenere" %}<script src="skrypt.js" defer></script>{% endif %}
 	</head>
@@ -14,6 +15,7 @@
 				<header>
 					<h1>Ciphers</h1>
 				</header>
+				<a href="/">Main page</a>
 				<a href="/Ceasar">Ceasar cipher</a>
 				<a href="/Vigenere">Vigenère cipher</a>
 				<a href="/BaconsCipher">Bacon's cipher</a>
