--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block main %}
 	<p>Welcome to Cryptosite. Please use the navbar to navigate the site.</p>
+	<p>Following ciphers are available on this site: Ceasar cipher, Vigenère cipher and Bacon's cipher (variant with every letter having a unique code).</p>
 {% endblock %}
