--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 			</article>
 		</main>
 		<footer>
-			<a href="https://github.com/Tobiasz-Duliniec/Cryptosite">Source code on GitHub.</a>
+			<a href="https://github.com/Tobiasz-Duliniec/Cryptosite" target="_blank" rel="noreferrer noopener">Source code on GitHub.</a>
 		</footer>
 	</body>
 </html>
