--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,11 @@
 			</nav>
 			<article>
 				<header><h1>Cryptosite</h1></header>
+				{% with messages = get_flashed_messages(with_categories = true) %}
+					{% if messages %}
+						<p>{{messages[0][1]}}</p>
+					{% endif %}
+				{% endwith %}
 				{% block main %}{% endblock %}
 			</article>
 		</main>
