--- a/templates/baconscipher.html
+++ b/templates/baconscipher.html
@@ -4,7 +4,7 @@
 	{% if result is defined %}
 		<p>{{message}} encrypted is {{result}}.</p>
 	{% endif %}
-	<form action="/BaconsCipher" id="encryption_form" method="POST">
+	<form action="/Bacon" id="encryption_form" method="POST">
 		<label for="name">Message to encrypt/decrypt:</label>
 		<input name="message" id="message" type="text" required>
 		<label for="action">Action:</label>
